🐛 fix: index.tsx 터치 안되는 오류

--- a/app.json
+++ b/app.json
@@ -35,9 +35,9 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
+          "imageWidth": 150,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#f0f9ff"
         }
       ]
     ],
